agregar logo github

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                             <a href="https://www.linkedin.com/in/miguel-%C3%A1ngel-mar%C3%ADn-toro-3b76a2207/"
                                 target="_blank" class="linkedin" title="linkedin"><span
                                     class="fab fa-linkedin-in"></span></a>
+                            <a href="https://github.com/miguelmarint" target="_blank" class="github"
+                                title="github"><span class="fab fa-github-square"></span></a>
                         </div>
 
                     </div>
@@ -204,6 +206,8 @@
                                 <a href="https://www.linkedin.com/in/miguel-%C3%A1ngel-mar%C3%ADn-toro-3b76a2207/"
                                     target="_blank" class="linkedin" title="linkedin"><span
                                         class="fab fa-linkedin-in"></span></a>
+                                <a href="https://github.com/miguelmarint" target="_blank" class="github"
+                                    title="github"><span class="fab fa-github-square"></span></a>
                             </div>
 
                         </div>
